Fixed overflow for website display

--- a/acmw.css
+++ b/acmw.css
@@ -3,7 +3,7 @@
   margin-right:auto;
   width:960px;
   max-height:100%;
-  overflow: scroll;
+  
 }
 
 body {
